
Combined all ramp models into ramps.py, where the specific models
inherit from the Ramp() superclass.
Files need to be properly documented.

*****

Updated bliss and ramp light-curve classes, renamed the pup argument
to obj in the settup() method.

*****

Added eclipse submodule, which implements mandelecl() and eclipse()
light-curve models.

*****

Adapted puppies.models' init to new ramps.py file and eclipse module.  
Removed mandelecl.py file (replaced with eclipse submodule).

*****

Updated Makefile to include submodules
and make it less verbose.

*****

Adapted pup_model.py to latest changes in puppies.models.


*****  Sun May 27 22:57:36 CEST 2018  *****

Renamed pup.model.fit() to lcfit() to avoid variable name conflict.
Added SDR and BIC calculations to laika object during lcfit().
For multiple model fits per pup requesting chiscale, scale according
to fit with lowest SDR.


*****  Mon Jun 11 01:06:49 CEST 2018  *****

Updated MC3 submodule.

*****

Got Light-curve MCMC up and running.
Wrote a basic screen summary output.
TBD: LC plot.
TBD: Put LC modeling into output folder.
TBD: Setup LC log.
TBD: Store LC output into pickle file.


*****  Sat Jun 16 10:57:25 CEST 2018  *****

Renamed spitzer.py to pup_spitzer.py


*****  Sun Jun 17 12:48:05 CEST 2018  *****

Reorganized the project, adding the core and inst modules that
contain the main reduction steps and the dataset initialization
routines, respectively.

*****

Renamed uncd variable to uncert.

*****

Return to original location after running core.center() and
core.photom().


*****  Sun Oct 14 17:00:00 CEST 2018  *****

Use datafile variable for the filepath to data, rather than using the
data variable itself (same for uncert and bdmskd).
Revamped io.save() accordingly.


*****  Di 5. Feb 15:43:13 CET 2019  *****

Some cosmetics.

*****

Added fitting and retrieval fixes from Bell's run.


*****  Sun Mar 7 22:37:09 CET 2021  *****

Synced with WASP-12b version.
